fixed recent trades table height on smaller width

--- a/src/styles/components/terminal/_terminal.scss
+++ b/src/styles/components/terminal/_terminal.scss
@@ -685,7 +685,7 @@
 		height: 140px;
 	}
 	.trades-table-wrapper {
-		height: 291px;
+		height: 325px;
 	}
 }
 
@@ -714,7 +714,7 @@
 		height: 140px;
 	}
 	.trades-table-wrapper {
-		height: 291px;
+		height: 325px;
 	}
 	.dropdown-table-wrapper {
 		height: 140px;
